fix: Исправить ошибки после первого ревью

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,4 +4,6 @@
   margin: 0 auto;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   color: #fff;
+  display: flex;
+  flex-direction: column;
 }
