--- a/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/src/components/Movies/MoviesCard/MoviesCard.css
@@ -1,12 +1,16 @@
 .card {
     position: relative;
-    max-width: max-content;
+    width: 100%;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .card__state {
     position: absolute;
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     opacity: 0;
 }
@@ -25,7 +29,6 @@
     top: 14px;
     right: 14px;
     width: 21px;
-    height: 21px;
 }
 
 .card__state-button {
@@ -33,7 +36,7 @@
     top: 14px;
     right: 14px;
     width: 72px;
-    height: 21px;
+    min-height: 21px;
     border: none;
     border-radius: 30px;
     padding: 0;
@@ -65,27 +68,29 @@
 }
 
 .card__image {
-    width: 360px;
-    height: 201px;
+    max-width: 360px;
+    width: 100%;
+    max-height: 201px;
     border-radius: 6px;
+    object-fit: cover;
 }
 
 .card__caption {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 14px 14px 0;
+    margin: 10px 14px 0;
+    align-self: normal;
 }
 
-.card__caption_name {
+.card__caption-name {
     margin: 0;
     font-weight: 500;
     font-size: 13px;
-    height: 16px;
     max-width: 250px;
 }
 
-.card__caption_time {
+.card__caption-time {
     width: 52px;
     height: 18px;
     background-color: #2f2f2f;
@@ -100,8 +105,7 @@
 }
 @media screen and (max-width: 800px) {
     .card__image {
-        width: 339px;
-        height: 190px;
+        max-width: 339px;
     }
     .card__caption {
         margin: 25px 0 0;
@@ -112,13 +116,11 @@
         width: 300px;
     }
     .card__image {
-        width: 300px;
-        height: 168px;
+       max-width: 300px;
         margin: auto;
     }
-    .card__caption_name {
+    .card__caption-name {
         font-size: 12px;
-        height: 15px;
         width: 240px;
     }
     .card__state_button {
