--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-    height: 74px;
+    max-height: 74px;
     width: 100%;
     background-color: #202020;
     display: flex;
@@ -7,15 +7,15 @@
 }
 
 .header__logo {
-    height: 38px;
     width: 38px;
     margin: 18px 0 18px 70px;
 }
-
+.header__logo:hover {
+    cursor: pointer;
+}
 .header__menu {
     margin: 28px 0 28px 5%;
     width: fit-content;
-    height: 18px;
 }
 
 .header__menu-link {
@@ -40,12 +40,12 @@
 }
 
 .header__button-set {
-    margin: 21px 70px 21px 0;
+    margin: 20px 70px 20px 0;
 }
 
 .header__account-button {
     width: 100px;
-    height: 32px;
+    min-height: 32px;
     padding: 0;
     color: #fff;
     background-color: #313131;
@@ -63,7 +63,7 @@
 
 .header__signin-button {
     width: 76px;
-    height: 32px;
+    min-height: 32px;
     background-color: #3ddc84;
     color: #000;
     margin-left: 30px;
@@ -75,6 +75,7 @@
 }
 
 .header__signin-button:hover {
+    cursor: pointer;
     opacity: .8;
 }
 
@@ -90,11 +91,12 @@
 
 .header__register-button:hover {
     opacity: .8;
+    cursor: pointer;
 }
 
 .header__menu-button {
     width: 44px;
-    height: 44px;
+    min-height: 44px;
     background-image: url('../../images/menu.svg');
     background-color: inherit;
     padding: 0;
@@ -135,7 +137,7 @@
 
     .header__signin-button {
         width: 54px;
-        height: 26px;
+        min-height: 26px;
         margin-left: 14px;
         font-size: 10px;
         line-height: 16px;
