--- a/src/components/Header/Menu/Menu.css
+++ b/src/components/Header/Menu/Menu.css
@@ -2,7 +2,6 @@
     background-color: rgba(0, 0, 0, .3);
     width: 100%;
     height: 100%;
-    max-height: 1024px;
     position: fixed;
     right: 0px;
     display: none;
@@ -16,7 +15,6 @@
     background-color: #202020;
     width: 67.7%;
     height: 100%;
-    max-height: 1024px;
     position: fixed;
     right: 0px;
     z-index: 3;
@@ -31,7 +29,7 @@
     padding: 0;
     background-position: center;
     display: block;
-    margin: 22px 22px 0 auto;
+    margin: 26px 27px 0 auto;
 }
 .menu__close-button:hover {
     opacity: .8;
@@ -40,7 +38,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 105px;
+    margin-top: 112px;
 }
 
 .menu__link {
@@ -48,19 +46,19 @@
     font-size: 18px;
     color: #fff;
     text-decoration: none;
+    min-height: 25px;
 }
 .menu__link:hover {
     opacity: .7;
 }
 .menu__link:nth-of-type(2) {
-    margin: 28px auto;
+    margin: 26px auto 23px;
 }
 
 .menu__link_active {
     font-weight: 500;
-    font-size: 18px;
     color: #fff;
-    text-decoration: underline 2px #fff;
+    border-bottom: 2px #fff solid;
 }
 
 .menu__account-button {
@@ -74,7 +72,7 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
-    margin-top: 621px;
+    margin-top: 617px;
 }
 .menu__account-button:hover {
     opacity: .8;
@@ -82,7 +80,6 @@
 @media screen and (max-width: 450px) {
     .menu {
         width: 320px;
-        max-height: 780px;
     }
 
     .menu__container {
@@ -90,18 +87,18 @@
     }
 
     .menu__close-button {
-        margin: 13px 13px 0 auto;
+        margin: 18px 18px 0 auto;
     }
 
     .menu__links {
-        margin-top: 100px;
+        margin-top: 105px;
     }
 
     .menu__link:nth-of-type(2) {
-        margin: 24px auto;
+        margin: 23px auto 15px;
     }
 
     .menu__account-button {
-        margin-top: 444px;
+        margin-top: 442px;
     }
 }
