--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -5,7 +5,6 @@
 .login__top {
     width: 396px;
     margin: auto;
-    height: 217px;
 }
 
 .login__logo {
@@ -13,7 +12,7 @@
 }
 
 .login__header {
-    margin: 40px auto;
+    margin: 38px auto 36px;
     font-weight: 500;
     font-size: 24px;
 }
@@ -34,7 +33,6 @@
     margin-top: 10px;
     padding: 15px;
     width: 366px;
-    height: 16px;
     border: none;
     border-radius: 8px;
     background-color: #2f2f2f;
@@ -42,7 +40,11 @@
     font-weight: 400;
     font-size: 13px;
 }
-
+.login__form-input:focus {
+    outline: none;
+    border: solid 1px rgb(255, 255, 196);
+    border-radius: 3px;
+}
 .login__form-error {
     color: #ee3465;
     font-weight: 400;
@@ -62,13 +64,14 @@
 }
 
 .login__submit-button {
-    margin-top: 179px;
-    height: 45px;
+    margin-top: 178px;
+    min-height: 45px;
     width: 100%;
     background-color: #4285f4;
     color: #fff;
     border: none;
     border-radius: 3px;
+    font-size: 14px;
 }
 
 .login__submit-button:hover {
@@ -96,14 +99,9 @@
 }
 
 @media screen and (max-width: 768px) {
-    .login__top {
-        height: 379px;
-    }
-
     .login__logo {
         margin-top: 232px;
     }
-
     .login__caption {
         padding-bottom: 232px;
     }
@@ -112,7 +110,6 @@
 @media screen and (max-width: 450px) {
     .login__top {
         width: 260px;
-        height: 253px;
     }
 
     .login__logo {
