--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -3,62 +3,73 @@
 }
 
 .about-me__header {
+    position: relative;
     margin: 0;
-    padding: 110px 0 0 70px;
+    padding: 107px 0 0 5.4%;
     font-weight: 400;
     font-size: 22px;
+    letter-spacing: calc(22px / -25);
 }
-
-.about-me__line {
-    max-width: 1140px;
+.about-me__header::after {
+    content: " ";
     width: 89%;
-    height: 1px;
+    min-height: 1px;
     background-color: #dadada;
-    margin: 23px auto 66px;
+    position: absolute;
+    top: 153px;
+    left: 5.4%;
 }
 
 .about-me__container {
-    position: relative;
-    max-width: 1140px;
+    display: grid;
+    grid-template-columns: minmax(min-content ,1fr) min-content;
+    grid-template-rows: 76px 46px 187px 17px;
     width: 89%;
     margin: 0 auto;
+    padding-top: 90px;
     padding-bottom: 100px;
 }
 
 .about-me__name {
     max-width: 600px;
     width: fit-content;
+    grid-column: 1;
     margin: 0;
     font-weight: 400;
     font-size: 50px;
     line-height: 58px;
+    letter-spacing: calc(50px / -25);
 }
 
 .about-me__about {
     max-width: 600px;
     width: fit-content;
-    margin: 18px 0 26px;
+    margin: 0;
     font-weight: 500;
     font-size: 18px;
     line-height: 20px;
+    grid-column: 1;
 }
 
 .about-me__text {
-    margin: 0 0 100px 0;
+    margin: 0;
     font-weight: 400;
     font-size: 14px;
     line-height: 22px;
     max-width: 600px;
-    width: 52.6%;
+    
     min-height: 88px;
+    grid-column: 1;
 }
 
 .about-me__link {
+    width: fit-content;
     text-decoration: none;
     color: #fff;
     font-weight: 500;
     font-size: 14px;
-    margin: 100px 0;
+    margin-bottom: 100px;
+    grid-column: 1;
 }
 .about-me__link:hover {
     opacity: .7;
@@ -66,10 +77,8 @@
 .about-me__picture {
     width: 270px;
     height: 327px;
-    position: absolute;
-    top: 0px;
-    right: 0px;
     border-radius: 10px;
+    grid-column: 2;
 }
 
 @media screen and (max-width: 800px) {
@@ -77,33 +86,34 @@
         padding: 90px 0 0 50px;
     }
 
-    .about-me__line {
+    .about-me__header::after {
         width: 87%;
+        top: 153px;
+        left: 50px;
     }
 
     .about-me__container {
         width: 87%;
         padding-bottom: 90px;
+        grid-template-rows: 56px 38px 195px 17px;
     }
 
     .about-me__name {
         max-width: 348px;
         font-size: 40px;
+        letter-spacing: calc(40px / -25);
         line-height: 40px;
     }
 
     .about-me__about {
         max-width: 348px;
-        margin: 16px 0 20px;
         font-size: 12px;
         line-height: 18px;
     }
 
     .about-me__text {
-        margin-bottom: 87px;
         font-size: 12px;
         line-height: 18px;
-        min-height: 108px;
     }
 
     .about-me__picture {
@@ -114,28 +124,35 @@
 
 @media screen and (max-width: 600px) {
     .about-me__header {
-        padding: 70px 0 0 14px;
+        padding: 65px 0 0 14px;
+        font-size: 18px;
+        letter-spacing: calc(18px / -25);
     }
-
     .about-me__line {
         width: 91.2%;
         margin: 28px auto 60px;
     }
-
+    .about-me__header::after {
+        width: 91.2%;
+        top: 120px;
+        left: 14px;
+    }
     .about-me__container {
         width: 91.2%;
         padding-bottom: 70px;
+        grid-template-columns: 1fr;
+        grid-template-rows: 352px 76px 36px 152px 17px;
     }
 
     .about-me__name {
-        padding-top: 392px;
         max-width: 292px;
         font-size: 30px;
+        letter-spacing: calc(30px / -25);
     }
 
     .about-me__about {
         max-width: 292px;
-        margin: 20px 0;
+        margin: 0;
         font-size: 11px;
         line-height: 16px;
     }
@@ -156,5 +173,7 @@
         left: 0;
         right: 0;
         border-radius: 10px;
+        grid-column: 1;
+        grid-row: 1;
     }
 }
