--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -16,21 +16,6 @@
     line-height: 20px;
 }
 
-.portfolio__link-container {
-    display: flex;
-    justify-content: space-between;
-
-}
-
-.portfolio__link-container:nth-of-type(2) {
-    border-top: 1px solid #424242;
-    border-bottom: 1px solid #424242;
-}
-
-.portfolio__link-container:nth-of-type(3) {
-    padding-bottom: 105px;
-}
-
 .portfolio__link {
     text-decoration: none;
     font-weight: 400;
@@ -38,13 +23,29 @@
     line-height: 50px;
     color: #fff;
     margin: 20px 0;
+    letter-spacing: calc(30px / -25);
+    display: flex;
+    justify-content: space-between;
+}
+.portfolio__link:nth-of-type(1) {
+    margin-top: 50px;
+}
+.portfolio__link:nth-of-type(2) {
+    padding: 20px 0 19px;
+    border-top: 1px solid #424242;
+    border-bottom: 1px solid #424242;
+}
+
+.portfolio__link:nth-of-type(3) {
+    padding-bottom: 145px;
+    margin: 0;
 }
 .portfolio__link:hover {
     opacity: .7;
 }
 .portfolio__link-img {
-    width: 29px;
-    height: 29px;
+    width: 20px;
+    padding-right: 4px;
     align-self: center;
 }
 .portfolio__link-img:hover {
@@ -59,10 +60,9 @@
         margin: 20px 0;
     }
     .portfolio__link-img {
-        width: 27px;
-        height: 27px;
+        width: 18px;
     }
-    .portfolio__link-container:nth-of-type(3) {
+    .portfolio__link:nth-of-type(3) {
         padding-bottom: 90px;
     }
 }
@@ -80,12 +80,12 @@
         font-size: 18px;
         line-height: 28px;
         margin: 20px 0;
+        letter-spacing: calc(18px / -25);
     }
     .portfolio__link-img {
-        width: 18px;
-        height: 18px;
+        width: 10px;
     }
-    .portfolio__link-container:nth-of-type(3) {
+    .portfolio__link:nth-of-type(3) {
         padding-bottom: 70px;
     }
 }
