--- a/src/components/Movies/MoviesCardList/MoviesCardList.css
+++ b/src/components/Movies/MoviesCardList/MoviesCardList.css
@@ -1,15 +1,16 @@
 .card-list {
-    padding: 70px 5.4% 80px;
+    padding: 70px 0 80px;
     background-color: #202020;
+    margin: 0 5.4%;
 }
 
 .card-list__elements {
     list-style: none;
     margin: 0;
-    padding: 0 0 28px 0;
+    padding: 0;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 60px 2.6%;
+    gap: 58px 2.6%;
     grid-auto-rows: max-content;
 }
 .card-list__more-button {
@@ -39,7 +40,8 @@
 }
 @media screen and (max-width: 1220px) {
     .card-list {
-        padding: 70px 30px 80px;
+        padding: 70px 0 80px;
+        margin: 0 3.9%;
     }
     .card-list__elements {
         padding-bottom: 12px;
@@ -49,7 +51,8 @@
 }
 @media screen and (max-width: 740px) {
     .card-list {
-        padding: 40px 10px 80px;
+        padding: 40px 0 80px; 
+        margin: 0 3.1%;   
     }
     .card-list__elements {
         padding-bottom: 12px;
