--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -1,24 +1,37 @@
 .search {
     background-color: #202020;
     padding-bottom: 10px;
+    position: relative;
 }
-
+.search::after {
+    content: " ";
+    width: 89%;
+    min-height: 1px;
+    background-color: #424242;
+    position: absolute;
+    top: 217px;
+    left: 5.4%;
+}
 .search__form {
-    height: 50px;
-    padding: 80px 10px 30px 70px;
-    display: flex;
-    gap: 10px;
-    align-items: center;
+    width: 89%;
+    padding: 80px 0 28px 0;
+    margin: 0 auto;
+    display: grid;
+    grid-template-rows: min-content min-content;
+    grid-template-columns: 1fr min-content;
+    row-gap: 29px;
 }
 
 .search__input {
-    width: 1084px;
-    height: 50px;
+    max-width: 1046px;
+    min-height: 50px;
     padding: 0 20px;
     border-radius: 5px;
     border: none;
     background-color: #2f2f2f;
     color: #fff;
+    grid-row: 1;
+    grid-column: 1;
 }
 
 .search__input::placeholder {
@@ -27,16 +40,17 @@
     font-size: 14px;
     line-height: 18px;
     margin-left: 20px;
-
 }
 
 .search__button {
     border: none;
     padding: 0;
     width: 44px;
-    height: 44px;
+    max-height: 44px;
     border-radius: 5px;
-    display: inline-block;
+    margin-left: 10px;
+    grid-row: 1;
+    align-self: center;
 }
 .search__button:hover {
     cursor: pointer;
@@ -47,13 +61,13 @@
     display: flex;
     align-items: center;
     width: fit-content;
-    gap: 12px;
+    gap: 13px;
     margin: 0 auto;
+    grid-area: 2 / 1/ 3/ -1;
 }
-
 .search__short-button {
     width: 34px;
-    height: 14px;
+    min-height: 14px;
     padding: 0;
     border: none;
     border-radius: 20px;
@@ -71,7 +85,7 @@
 
 .search__short-circle {
     width: 10px;
-    height: 10px;
+    min-height: 10px;
     border-radius: 50%;
     background-color: #f5f5f5;
     margin-left: 2px;
@@ -88,34 +102,31 @@
     font-size: 12px;
     line-height: 18px;
 }
-
-.search__line {
-    width: 1140px;
-    max-width: 100%;
-    height: 1px;
-    background-color: #424242;
-    margin: 40px auto 0;
-}
 @media screen and (max-width: 768px) {
     .search__form {
-        height: 50px;
+        row-gap: 41px;
         padding: 80px 30px 40px;
     }
-    .search__line {
-        width: 708px;
+    .search::after {
+        width: 92%;
+        top: 229px;
+        left: 3.9%;
+    }
+    .search__button {
+        margin-right: 0;
+    }
+    .search__input {
+        max-width: 654px;
     }
 }
 @media screen and (max-width: 420px) {
     .search__form {
-        height: 44px;
+        max-height: 44px;
         padding: 80px 14px 47px;
-    }
-    .search__line {
-        width: 100%;
     }
     .search__input {
         width: 212px;
-        height: 44px;
+        min-height: 44px;
         padding: 0 13px;
         border-radius: 5px;
         border: none;
