--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,6 +1,5 @@
 .profile {
     background-color: #202020;
-    height: 626px;
 }
 
 .profile__header {
@@ -12,28 +11,49 @@
 }
 
 .profile__content {
-    padding-top: 123px;
+    padding-top: 125px;
     margin: 0 auto;
     width: 410px;
     font-weight: 400;
     font-size: 11px;
     line-height: 14px;
 }
-
 .profile__data {
     display: flex;
     justify-content: space-between;
     font-weight: 500;
 }
 
-.profile__line {
+.profile__data:nth-of-type(2) {
+    position: relative;
+    margin-top: 16px;
+    height: 30px;
+    border-top: solid 1px #424242;
+}
+.profile__data:nth-of-type(2)::before {
+    position: absolute;
+    bottom: 30px;
+    left: 0px;
     width: 100%;
-    margin: 16px 0;
+    min-height: 1px;
     border: solid 1px #424242;
 }
 
 .profile__text {
-    margin: 0;
+    margin: auto 0 0 0;
+}
+.profile__input {
+    border: none;
+    background-color: inherit;
+    color: #fff;
+    text-align: end;
+    max-height: 14px;
+    margin-top: auto;
+}
+.profile__input:focus {
+    outline: none;
+    border: solid 1px rgb(255, 255, 196);
+    border-radius: 3px;
 }
 
 .profile__buttons {
@@ -41,6 +61,7 @@
     flex-direction: column;
     margin: 0 auto;
     padding-top: 220px;
+    padding-bottom: 70px;
     width: 410px;
 }
 
@@ -52,10 +73,12 @@
     font-size: 13px;
     line-height: 16px;
 }
+
 .profile__button:hover {
     cursor: pointer;
     opacity: .8;
 }
+
 .profile__edit-button {
     color: #fff;
     font-weight: 400;
@@ -66,35 +89,38 @@
     font-weight: 500;
     margin-top: 16px;
 }
+
 @media screen and (max-width: 768px) {
-    .profile {
-        height: 947px;
-    }
     .profile__header {
         padding-top: 236px;
     }
+
     .profile__content {
         padding-top: 96px;
     }
+
     .profile__buttons {
         padding-top: 210px;
+        padding-bottom: 269px;
     }
 }
+
 @media screen and (max-width: 420px) {
-    .profile {
-        height: 703px;
-    }
     .profile__header {
         padding-top: 70px;
     }
+
     .profile__content {
         padding-top: 80px;
         width: 260px;
     }
+
     .profile__buttons {
         padding-top: 379px;
+        padding-bottom: 40px;
         width: 260px;
     }
+
     .profile__button {
         font-size: 12px;
         line-height: 15px;
