--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -15,22 +15,37 @@
     font-size: 18px;
     line-height: 20px;
 }
-
+.portfolio__links {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.portfolio__link-unit {
+    margin: 0;
+    padding: 0;
+}
+.portfolio__link-unit:nth-of-type(1) {
+    margin-top: 50px;
+}
+.portfolio__link-unit:nth-of-type(2) {
+    margin-top: 20px;
+}
+.portfolio__link-unit:nth-of-type(3) {
+    margin-top: 20px;
+}
 .portfolio__link {
     text-decoration: none;
     font-weight: 400;
     font-size: 30px;
     line-height: 50px;
     color: #fff;
-    margin: 20px 0;
+    margin: 0;
     letter-spacing: calc(30px / -25);
     display: flex;
     justify-content: space-between;
 }
-.portfolio__link:nth-of-type(1) {
-    margin-top: 50px;
-}
-.portfolio__link:nth-of-type(2) {
+.portfolio__link_central {
+    margin: 0;
     padding: 20px 0 19px;
     border-top: 1px solid #424242;
     border-bottom: 1px solid #424242;
