--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -10,7 +10,10 @@
 .register__logo {
     margin-top: 70px;
 }
-
+.register__logo:hover {
+    cursor: pointer;
+    opacity: .7;
+}
 .register__header {
     margin: 38px auto 36px;
     font-weight: 500;
@@ -94,6 +97,7 @@
 .register__link {
     text-decoration: none;
     color: #4285f4;
+    margin-left: 2px;
 }
 
 .register__link:hover {
@@ -120,7 +124,7 @@
     }
 
     .register__header {
-        margin: 50px auto 80px;
+        margin: 48px auto 74px;
         font-weight: 500;
         font-size: 24px;
         text-align: center;
@@ -139,7 +143,8 @@
     }
 
     .register__submit-button {
-        margin-top: 155px;
+        margin-top: 161px;
+        font-size: 12px;
     }
 
     .register__caption {
@@ -147,5 +152,8 @@
         padding-bottom: 30px;
         font-size: 12px;
         line-height: 15px;
+    }
+    .register__form-error {
+        margin: 5px auto 0;
     }
 }
