--- a/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/src/components/Movies/MoviesCard/MoviesCard.css
@@ -76,6 +76,7 @@
     max-width: 360px;
     width: 100%;
     max-height: 201px;
+    height: 100%;
     border-radius: 6px;
     object-fit: cover;
 }
