--- a/src/components/Movies/Preloader/Preloader.css
+++ b/src/components/Movies/Preloader/Preloader.css
@@ -41,12 +41,14 @@
 
 .preloader {
     position: fixed;
+    right: 0px;
     display: none;
     align-items: center;
     justify-content: center;
-    width: 1280px;
-    height: 100%;
+    width: 100%;
+    height: 100vh;
     z-index: 10;
+    margin: 0 auto;
     background-color: rgba(0, 0, 0, 0.6);
     display: none;
 }
