--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -33,7 +33,7 @@
 }
 
 .register__form-input {
-    margin-top: 8px;
+    margin-top: 10px;
     padding: 15px;
     width: 366px;
     border: none;
@@ -61,6 +61,9 @@
 .register__form-error_active {
     opacity: 1;
 }
+.register__api-error {
+    margin-top: 85px;
+}
 
 .register__bottom {
     width: 396px;
@@ -68,7 +71,7 @@
 }
 
 .register__submit-button {
-    margin-top: 67px;
+    margin-top: 10px;
     min-height: 45px;
     width: 100%;
     background-color: #4285f4;
@@ -82,7 +85,14 @@
     cursor: pointer;
     opacity: .8;
 }
-
+.register__submit-button_disabled {
+    background-color: grey;
+}
+.register__submit-button_disabled:hover {
+    background-color: grey;
+    cursor: not-allowed;
+    opacity: 1;
+}
 .register__caption {
     margin: 16px auto 0;
     padding-bottom: 70px;
