fix: Исправить ошибки после первого ревью

--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -18,7 +18,9 @@
     letter-spacing: calc(50px / -25); 
     text-align: center;
 }
-
+.promo__link {
+    all: unset;
+}
 .promo__menu {
     margin: auto;
     padding-top: 151px;
